fix images overlaping navbar, add locationItem

--- a/styles/Featured.module.scss
+++ b/styles/Featured.module.scss
@@ -14,10 +14,12 @@
     justify-content: center;
 
     &__item {
+        position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin: 10px;
+
 
 
     }
