--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -1,5 +1,6 @@
 .nav {
     position: fixed;
+    z-index: 99;
     background-color: black;
     top: 0;
     right: 0;
